basic ui with icons added

--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Notes Application</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
     <div class="container">
-        <h1>Notes</h1>
+        <!-- add icon before heading  -->
+        <h1> <img src="images/notes.png" alt=""> Notes</h1>
 
-        <button>Create Notes</button>
+        <button> <img src="images/edit.jpg" alt="" id="editImg"> Create Notes</button>
     </div>
     
 </body>
