add input-box when user clicks create notes button

--- a/index.html
+++ b/index.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Notes Application</title>
 
     <link rel="stylesheet" href="style.css">
+
+    <script defer src="script.js"></script>
 </head>
 <body>
 
     <div class="container">
-        <!-- add icon before heading  -->
+        <!-- adad icon before heading  -->
         <h1> <img src="images/notes.png" alt=""> Notes</h1>
 
-        <button> <img src="images/edit.jpg" alt="" id="editImg"> Create Notes</button>
+        <button class="btn"> <img src="images/edit.jpg" alt="" id="editImg"> Create Notes</button>
+        
+        <!-- display this input box only when the user clicks above button  -->
+
+        <!-- display it with the help of js  -->
+         <div class="notes-container"></div>
+        <!-- <div class="notes-container">
+            <p contenteditable="true" class="input-box">
+                <img src="images/delete.jpg" alt="" >
+            </p>
+        </div> -->
     </div>
     
 </body>
